refactor: 코드 일관성 및 범용성을 위해 String.format 사용